# precept-research

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEPENDENCIES.md  ISSUES - 15 June.md  ISSUES.md  README.md  RESEARCH_ROADMAP-15 June.md  RESEARCH_ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
configs/: experiment.yaml
configs/condition/: C0.yaml  C1.yaml  C2.yaml  C3.yaml  C4.yaml
configs/difficulty/: easy.yaml  hard.yaml  medium.yaml
configs/model/: qwen14b.yaml  qwen32b.yaml  qwen8b.yaml
configs/serialisation/: grid.yaml  nl.yaml  numeric.yaml
docs/: handoff_schema.md  serving.md
docs/review/: 2026-07-11-implementation-review.md
scripts/: determinism_check.py
scripts/myriad/: serve.sh
src/preceptx/: __init__.py  config.py  determinism.py  manifest.py  seeding.py
src/preceptx/agents/: channel.py  graph.py  prompts.py
src/preceptx/analysis/: figures.py  stats.py
src/preceptx/data/: __init__.py  otel_capture.py  schema.py  writer.py
src/preceptx/experiments/: pilot.py  rq1.py  runner.py  sweep.py
src/preceptx/gate/: calibration.py  statistics.py
src/preceptx/measure/: divergence.py  featuriser.py  pvi_cpvi.py  twin.py
src/preceptx/serving/: __init__.py  client.py
src/preceptx/sim/: actions.py  arena.py  load.py  outcomes.py  serialise.py
tests/integration/: test_calibration_report.py  test_determinism_check.py  test_pilot_report.py  test_rq1_grid.py  test_spine_closes_loop.py
tests/unit/: test_config.py  test_manifest.py  test_package.py  test_seeding.py
tests/unit/agents/: test_channel.py  test_graph.py
tests/unit/analysis/: test_figures.py  test_stats.py
tests/unit/data/: test_otel_capture.py  test_schema.py  test_writer.py
tests/unit/experiments/: test_pilot.py  test_rq1.py  test_runner.py  test_sweep.py
tests/unit/gate/: test_calibration.py  test_statistics.py
tests/unit/measure/: _synthetic.py  test_divergence.py  test_featuriser.py  test_pvi_cpvi.py  test_twin.py
tests/unit/serving/: test_client.py
tests/unit/sim/: test_actions.py  test_arena.py  test_load.py  test_outcomes.py  test_serialise.py
