[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "preceptx"
version = "0.0.0"
description = "Conditional pointwise V-usable information at the LLM coordination boundary (standalone research repo)."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "Gian Prem Rajaram" }]

# Core: analysis + sim + agents. Installs with no GPU, no torch, no vllm.
dependencies = [
  "pydantic>=2.5,<3",
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "scipy>=1.11,<2",
  "scikit-learn>=1.3,<2",
  "statsmodels>=0.14,<1",
  "pymunk>=6.6,<7",
  "langgraph>=0.2,<1",
  "langchain-openai>=0.2,<1",
  "openai>=1.40,<2",
  "hydra-core>=1.3,<2",
  "omegaconf>=2.3,<3",
  "pyarrow>=15,<22",
  "opentelemetry-api>=1.25,<2",
  "opentelemetry-sdk>=1.25,<2",
]

[project.optional-dependencies]
# vLLM serving (Myriad GPU nodes only); not needed by the analysis code.
serving = ["vllm>=0.6,<1"]
# Embedding featuriser; the only torch puller, kept out of core so analysis/CI stay light.
embed = ["sentence-transformers>=3.0,<6"]
# RQ3a external-validity dataset loaders.
data = ["datasets>=2.20,<4"]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "hypothesis>=6.100,<7",
  "mypy>=1.11,<2",
  "ruff>=0.6,<1",
  "pip-audit>=2.7,<3",
  "pre-commit>=3.8,<5",
  "respx>=0.21,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/preceptx"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
files = ["src/preceptx"]
strict = true
plugins = ["pydantic.mypy"]

# Untyped third-party libraries: silence missing imports for THEM only, never our own code.
[[tool.mypy.overrides]]
module = [
  "pymunk.*",
  "sklearn.*",
  "scipy.*",
  "statsmodels.*",
  "langgraph.*",
  "langchain_openai.*",
  "sentence_transformers.*",
  "hydra.*",
  "omegaconf.*",
  "vllm.*",
  "datasets.*",
  "torch.*",
  "pandas.*",
  "pyarrow.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["error"]

[tool.coverage.run]
source = ["src/preceptx"]

[tool.coverage.report]
show_missing = true
# The >=80% gate (CLAUDE.md) is enforced once the load-bearing core (sim/measure/gate/runner)
# exists; raise --cov-fail-under=80 in CI when those modules land.
